ProFIT/objects/Event_Organizer__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the location of the event</description>
        <inlineHelpText>Choose the location of the event</inlineHelpText>
        <label>Address</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Event Organizers</relationshipLabel>
        <relationshipName>Event_Organizers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alternative_Email__c</fullName>
        <description>Displays the organizer&apos;s alternate email</description>
        <inlineHelpText>Enter the organizer&apos;s alternate email</inlineHelpText>
        <label>Alternative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Alternative_Phone__c</fullName>
        <description>Displays the organizer&apos;s alternate phone number</description>
        <inlineHelpText>Enter the organizer&apos;s alternate phone number</inlineHelpText>
        <label>Alternative Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Displays the organizer&apos;s email</description>
        <inlineHelpText>Enter the organizer&apos;s email</inlineHelpText>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Displays the organizer&apos;s phone number</description>
        <inlineHelpText>Enter the organizer&apos;s phone number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <label>Event Organizer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Organizer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Organizers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>